tests/requests/invalid/001.py
from restkit.errors import NoMoreData
request = NoMoreData